--- a/src/app/auth/register/register.component.css
+++ b/src/app/auth/register/register.component.css
@@ -1,50 +1,55 @@
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-    /* display: flex; */
-    /* justify-content: center; */
-    /* align-items: center; */
-    height: 100vh;
-    margin: 0;
-    
-  }
-  
-  .container {
-    background: rgb(243, 156, 156);
-    padding: 20px;
+
+  .container .register {
+    margin-top: 30px;
+    padding: 0px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
     border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 90%;
-    text-align: center;
   }
-  
-  .container form {
-    display: none;
-  }
-  
-  .container form.active {
-    display: block;
-  }
-  
+
   .toggle-buttons {
-    margin-bottom: 20px;
+    /* background-color: aquamarine; */
+    width: 100%;
+    height: 60px;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+
   }
   
-  .toggle-buttons button {
-    background: #007bff;
+.toggle-buttons button {
+    background: #6fb2ff;
     color: white;
     border: none;
     padding: 10px 20px;
     cursor: pointer;
-    margin: 5px;
+    width: 50%;
+    height: 60px;
   }
   
-  .toggle-buttons button.active {
-    background: #0056b3;
+.toggle-buttons button.patient {
+    background: #407cd4;
+    border-top-left-radius: 8px;
+  }
+  .toggle-buttons button.medecin {
+    background: #31bcd4;
+    border-top-right-radius: 8px;
+  }
+
+  .container .register form {
+    margin-top: 40px;
+    display: none;
   }
   
+  .container .register form.active {
+    display: block;
+  }
+  
+  form h2{
+   text-align: center;
+  }
+
   .form-group {
     margin-bottom: 15px;
+    margin: 20px 30px;
     text-align: left;
   }
   
@@ -58,15 +63,30 @@ body {
     padding: 8px;
     box-sizing: border-box;
   }
-  
-  .submit-button {
-    background: #28a745;
+
+  form button {
     color: white;
     border: none;
+    margin-top: 30px;
     padding: 10px 20px;
+    margin-bottom: 0px;
     cursor: pointer;
     width: 100%;
+    height: 40px;
   }
+  
+  .submit-patient {
+    background: #407cd4;
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
+  }
+  
+  .submit-medecin {
+    background: #31bcd4;
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
+  }
+
 
 
 
