--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,65 @@
-/* You can add global styles to this file, and also import other style files */
+/* /////////////////////////////////////////////////////////// */
+/* /////////////////////////////////////////////////////////// */
+/* ////// Gestion Medicale Created by Mohamed Machlou    ///// */
+/* /////////////////////////////////////////////////////////// */
+/* /////////////////////////////////////////////////////////// */
+/* Start Variables  */
+:root {
+    --orange-color: #eca95b;
+  
+  }
+  /* End Variables  */
+  
+  /* Start Global Rules */
+  * {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+  }
+  html {
+    scroll-behavior: smooth;
+  }
+  body {
+    font-family: "Poppins", sans-serif;
+    caret-color: transparent;
+  }
+  
+  /* Start Media Queries */
+  /* Small devices (Portrait phones, 300px and up) */
+  @media (min-width: 300px) {
+    .container {
+      width: 100%;
+      padding-left: 40px;
+      padding-right: 40px;
+    }
+  }
+  /* Small devices (landscape phones, 576px and up) */
+  @media (min-width: 576px) {
+    .container {
+      width: 100%;
+    }
+  }
+  /* Medium devices (tablets, 768px and up) */
+  @media (min-width: 768px) {
+    .container {
+      width: 100%;
+    }
+  }
+  /* Large devices (desktops, 992px and up) */
+  @media (min-width: 992px) {
+    .container {
+      width: 100%;
+    }
+  }
+  /* Extra large devices (large desktops, 1200px and up) */
+  @media (min-width: 1200px) {
+    .container {
+      width: 100%;
+
+    }
+  }
+  /* End Media Queries */
+  /* Start Global Rules */
+
