--- a/src/app/auth/register/register.component.css
+++ b/src/app/auth/register/register.component.css
@@ -8,6 +8,7 @@
 
   .toggle-buttons {
     /* background-color: aquamarine; */
+    display: flex;
     width: 100%;
     height: 60px;
     border-top-left-radius: 8px;
@@ -25,15 +26,16 @@
     height: 60px;
   }
   
-.toggle-buttons button.patient {
+  .toggle-buttons button.patient {
     background: #407cd4;
     border-top-left-radius: 8px;
   }
+
   .toggle-buttons button.medecin {
     background: #31bcd4;
     border-top-right-radius: 8px;
   }
-
+  
   .container .register form {
     margin-top: 40px;
     display: none;
@@ -44,9 +46,9 @@
   }
   
   form h2{
-   text-align: center;
+    text-align: center;
   }
-
+  
   .form-group {
     margin-bottom: 15px;
     margin: 20px 30px;
@@ -63,32 +65,73 @@
     padding: 8px;
     box-sizing: border-box;
   }
-
-  form button {
+  
+  form .btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  form .btn button {
     color: white;
     border: none;
     margin-top: 30px;
     padding: 10px 20px;
-    margin-bottom: 0px;
     cursor: pointer;
-    width: 100%;
+    width: 40%;
     height: 40px;
   }
   
   .submit-patient {
     background: #407cd4;
     border-bottom-left-radius: 8px;
-    border-bottom-right-radius: 8px;
+    border-top-right-radius: 8px;
   }
   
   .submit-medecin {
     background: #31bcd4;
     border-bottom-left-radius: 8px;
-    border-bottom-right-radius: 8px;
+    border-top-right-radius: 8px;
+  }
+  
+  form .login {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    margin: 20px 20px 30px 30px;
   }
 
+  form .login p{
+    font-weight: 500;
+    font-size: medium;
+  }
 
+  form .login a{
+    color: #31bcd4;
+  }
 
+  form{
+    padding: 20px 0px;
+  }
+  
+  
+ 
+  
+
+  /* Small devices (landscape phones, 576px and down) */
+  @media (max-width: 576px) {
+    
+    .toggle-buttons {
+      display: flex;
+      
+    }
+
+    .toggle-buttons button {
+        width: 50%;
+        height: 60px;
+      }
+  }
+  
 
 
 
