reset component and medecin dashboard

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<register></register>
+<!-- <register></register> -->
+<!-- <login></login> -->
+<!-- <reset-password></reset-password> -->
+<dashboard-medecin></dashboard-medecin>
