--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,1 +1,29 @@
-<p>login works!</p>
+<!-- Start Login -->
+<div class="container">
+    <div class="login">
+    
+      <form >
+        <h2>Login</h2>
+        <div class="form-group">
+            <label for="patientEmail">Email</label>
+            <input type="email" id="patientEmail" name="patientEmail" required>
+        </div>
+        <div class="form-group">
+            <label for="patientPassword">Mot de passe</label>
+            <input type="password" id="patientPassword" name="patientPassword" required>
+        </div>
+        <div class="pass-oublie">
+          <p><a href="">Mot de passe oublié</a></p>
+        </div>
+        <div class="btn">
+          <button type="button" >Connexion</button>
+        </div>
+      </form>
+
+    </div>
+  </div>
+  
+  
+  
+  
+  <!-- End Login -->
